# cpp-slim

./: .gitignore  .gitmodules  CMakeLists.txt  makefile
examples/custom-type/: CMakeLists.txt  Main.cpp
include/slim/: Function.hpp
include/slim/types/: Object.hpp  Time.hpp  Type.hpp
source/template/: TemplateBlock.cpp  TemplateParts.cpp
source/types/: Object.cpp  Regexp.cpp  String.cpp  Time.cpp
